// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local/todo/Repo repo.create (values ["user","different description","low"]) should make database calls 1`] = `
Object {
  "mockFnCalls": Array [
    Array [
      "db.none",
      Array [
        "INSERT INTO todo(user_id,description,priority)VALUES('user','different description','low')",
      ],
    ],
  ],
  "result": Array [
    "db.none",
    Array [
      "INSERT INTO todo(user_id,description,priority)VALUES('user','different description','low')",
    ],
  ],
}
`;

exports[`local/todo/Repo repo.delete (values ["user","8"]) should make database calls 1`] = `
Object {
  "mockFnCalls": Array [
    Array [
      "db.result",
      Array [
        "DELETE FROM todo WHERE user_id='user' AND todo_id='8'",
        null,
        "local/utils/extractPgRowCount",
      ],
    ],
  ],
  "result": Array [
    "db.result",
    Array [
      "DELETE FROM todo WHERE user_id='user' AND todo_id='8'",
      null,
      "local/utils/extractPgRowCount",
    ],
  ],
}
`;

exports[`local/todo/Repo repo.read (values "user") should make database calls 1`] = `
Object {
  "mockFnCalls": Array [
    Array [
      "db.any",
      Array [
        "SELECT todo_id,description,priority,status,created_on,updated_on FROM todo WHERE user_id='user'",
      ],
    ],
  ],
  "result": Array [
    "db.any",
    Array [
      "SELECT todo_id,description,priority,status,created_on,updated_on FROM todo WHERE user_id='user'",
    ],
  ],
}
`;

exports[`local/todo/Repo repo.update (values ["user","14","high","pending"]) should make database calls 1`] = `
Object {
  "mockFnCalls": Array [
    Array [
      "db.none",
      Array [
        "UPDATE todo SET priority='high',status='pending',updated_on=NOW()WHERE user_id='user' AND todo_id='14'",
      ],
    ],
  ],
  "result": Array [
    "db.none",
    Array [
      "UPDATE todo SET priority='high',status='pending',updated_on=NOW()WHERE user_id='user' AND todo_id='14'",
    ],
  ],
}
`;
